# translation-agent

./: .gitignore  pyproject.toml
examples/: example_script.py
src/translation_agent/: utils.py
